# structured-proxy

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  lib.rs  main.rs  openapi.rs
src/transcode/: body.rs  codec.rs  error.rs  metadata.rs  mod.rs
